@@ -1,3 +1,10 @@
+== Git
+
+* Minor enhancements
+
+  * Allow CONTENT_TYPE to be specified in the env and not overwritten when
+    sending a POST or PUT
+
 == 0.4.0 / 2009-06-25
 
 * Minor enhancements
